# gigsly

./: CLAUDE.md  README.md  main.py  pyproject.toml
docs/: README.md  TASK_LIST.md  TECH_STACK.md
docs/plans/: 2025-01-30-gigsly-design.md
docs/plans/features/: 00-keyboard-shortcuts.md  01-data-model.md  02-venues.md  03-shows.md  04-calendar.md  05-recurring-gigs.md  06-payments.md  07-contact-tracking.md  08-smart-reports.md  09-tax-reports.md  10-ics-calendar.md  11-settings-backup.md  12-dashboard.md  13-algorithms.md
gigsly/: __init__.py  algorithms.py  app.py  backup.py  cli.py  config.py  ics_export.py  reports.py
gigsly/db/: __init__.py  crud.py  models.py  session.py
gigsly/screens/: __init__.py  base.py  calendar.py  dashboard.py  onboarding.py  shows.py  venues.py
gigsly/widgets/: __init__.py  confirm.py  datepicker.py  flash.py  select.py
tests/: __init__.py  conftest.py
tests/db/: __init__.py  test_models.py
tests/unit/: __init__.py  test_algorithms.py
